editors/zed/grammars/tree-sitter-damask/test/corpus/tags.txt
==================
plain text
==================

Hello, world!

---

(document
  (text))

==================
expression tag
==================

Hello {self.name}!

---

(document
  (text)
  (tag
    (tag_open)
    (code)
    (tag_delimiter))
  (text))

==================
directives
==================

{@html self.body}{@render self.footer}

---

(document
  (text)
  (tag
    (tag_open)
    (code)
    (tag_delimiter))
  (tag
    (tag_open)
    (code)
    (tag_delimiter))
  (text))

==================
each block
==================

{#each &self.items as item}<li>{item}</li>{/each}

---

(document
  (text)
  (tag
    (tag_open)
    (code)
    (tag_delimiter))
  (element
    (tag_name
      (element_name)))
  (tag
    (tag_open)
    (code)
    (tag_delimiter))
  (element
    (tag_name
      (element_name)))
  (tag
    (tag_open)
    (code)
    (tag_delimiter))
  (text))

==================
render with nested braces and a brace in a string
==================

{@render Card { title: "x }".into() }}

---

(document
  (text)
  (tag
    (tag_open)
    (code
      (code
        (string)))
    (tag_delimiter))
  (text))

==================
html comment is its own node
==================

a<!-- a comment -->b

---

(document
  (text)
  (html_comment)
  (text))

==================
interpolation inside a quoted attribute value
==================

<div class="px-3 {self.tone()}">hi</div>

---

(document
  (text)
  (element
    (tag_name
      (element_name))
    (class_attribute
      (directive_prefix)
      (quoted_value
        (text)
        (tag
          (tag_open)
          (code)
          (tag_delimiter)))))
  (text)
  (element
    (tag_name
      (element_name)))
  (text))

==================
class directive and class list
==================

<div class=[self.extra, "b"] class:on={self.open}></div>

---

(document
  (text)
  (element
    (tag_name
      (element_name))
    (class_attribute
      (directive_prefix)
      (class_list
        (class_expr)
        (class_string)))
    (class_directive
      (class_directive_name
        (directive_prefix)
        (class_name))
      (tag
        (tag_open)
        (code)
        (tag_delimiter))))
  (element
    (tag_name
      (element_name)))
  (text))

==================
{# #} comment reaches no output
==================

a{# not rendered: as, if, statistics #}b

---

(document
  (text)
  (comment)
  (text))

==================
a bare < stays prose
==================

a < b and 3<4

---

(document
  (text))

==================
conditional class map
==================

<div class={ "on": self.open, "off": !self.open }></div>

---

(document
  (text)
  (element
    (tag_name
      (element_name))
    (class_attribute
      (directive_prefix)
      (class_brace
        (class_pair
          (class_key)
          (class_condition
            (code)))
        (class_pair
          (class_key)
          (class_condition
            (code))))))
  (element
    (tag_name
      (element_name)))
  (text))

==================
attribute spread
==================

<input {...self.wiring} {...&self.data}/>

---

(document
  (text)
  (element
    (tag_name
      (element_name))
    (spread
      (code))
    (spread
      (code)))
  (text))

==================
doctype
==================

<!DOCTYPE html>
<html></html>

---

(document
  (text)
  (doctype)
  (text)
  (element
    (tag_name
      (element_name)))
  (element
    (tag_name
      (element_name)))
  (text))

==================
brackets inside a class list's strings
==================

<div class=["p-[3px] rounded-[9px]", self.class]></div>

---

(document
  (text)
  (element
    (tag_name
      (element_name))
    (class_attribute
      (directive_prefix)
      (class_list
        (class_string)
        (class_expr))))
  (element
    (tag_name
      (element_name)))
  (text))
